--- a/about/index.html
+++ b/about/index.html
@@ -1,31 +1,27 @@
 ---
 layout: layout
-title: "About Carlos Alexandro Becker"
+title: "About Shankai Ji"
 ---
 
 <section class="content about">
-  <h1 class="big thin">Carlos Alexandro Becker</h1>
+  <h1 class="big thin">Shankai Ji</h1>
 
   <img src="/images/carlos-carine.jpg" alt="Carlos Alexandro Becker"
     class="noclip" width="650" height="300" style="margin-bottom: 15px" />
 
   <p>
-    Carlos works at <a href="https://totvs.com.br">TOTVS S/A</a>. When he's not
-    doing that, he's <a href="http://caarlos0.github.com">blogging</a>,
-    hacking on <a href="https://github.com/caarlos0">open source</a>,
-    building new products (like <a href="http://wealcash.com">Wealcash</a>)
-    and learning new things. He has proficiency in Java and Ruby (preffer Ruby,
-    of course), but also knew something about python, haskell and erlang. He is
-    married with this beutiful girl in the photo and lives with her in Joinville
-    (Santa Catarina - Brazil).
+    Shankai works at <a href="https://adways.net">Adways Inc.</a> in
+    Tokyo, Japan. When he's not
+    doing that, he's <a href="http://skji.github.io">blogging</a>,
+    hacking on <a href="https://github.com/skji">open source</a>,
+    building new products, playing DOTA or WOW, pokering
+    and learning new things. He has proficiency in Perl, PHP and C++ (preffer C++,
+    of course), but also knew something about JS, HTML and Object-C. He is
+    single and want make friends with beautiful and kind girls.
   </p>
 
   <p>
-    Carlos used to have a pretty, bad-ass and eye-candy bloated curriculum here,
-    but, well, there is so much places to update. So, check his
-    <a href="http://br.linkedin.com/in/caarlos0">
-      Linkedin Profile
-    </a>. You can also send him an <a href="mailto:&#099;&#097;&#097;&#114;&#108;&#111;&#115;&#048;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">email</a> or a ping
-    at <a href="http://twitter.com/caarlos0">twitter</a>.
+    You can also send him an <a href="mailto:jishakai@gmail.com;">email</a> or a ping
+    at <a href="http://twitter.com/jishankai">twitter</a>.
   </p>
 </section>
