--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@ title: "About Shankai Ji"
 <section class="content about">
   <h1 class="big thin">Shankai Ji</h1>
 
-  <img src="/images/carlos-carine.jpg" alt="Carlos Alexandro Becker"
+  <img src="/images/" alt="Shankai Ji"
     class="noclip" width="650" height="300" style="margin-bottom: 15px" />
 
   <p>
