--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@ title: "About Shankai Ji"
   <h1 class="big thin">Shankai Ji</h1>
 
   <img src="/images/" alt="Shankai Ji"
-    class="noclip" width="650" height="300" style="margin-bottom: 15px" />
+    class="noclip" width="650" height="300" style="margin-bottom:15px; text-align:center" />
 
   <p>
     Shankai works at <a href="https://adways.net">Adways Inc.</a> in
