--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@ title: "About Shankai Ji"
 <section class="content about">
   <h1 class="big thin">Shankai Ji</h1>
 
-  <img src="/images/" alt="Shankai Ji"
+  <img src="https://www.dropbox.com/s/9l49iui64maxkv0/2014-02-10%2015.47.28.jpg" alt="Shankai Ji"
     class="noclip" width="650" height="300" style="margin-bottom:15px; text-align:center" />
 
   <p>
