--- a/about/index.html
+++ b/about/index.html
@@ -3,39 +3,37 @@ layout: layout
 title: "About Me"
 ---
 
-<section class="content about">
-  <h1 class="big thin">Shankai Ji</h1>
+<section class="about">
+  <h1 class="big thin">About Me</h1>
 
-  <p>
+  <p style="text-align:center">
     <img src="https://dl.dropboxusercontent.com/u/213467948/2014-02-10%2015.47.28.jpg" alt="Shankai Ji"
       class="noclip" style="margin-bottom:15px" align=“center” />
   </p>
   
   <p>
     I have worked in many places in a myriad of fields. I can readily learn and adapt to a new discipline, area or environment and start pushing real results quickly.
-    Diverse background in Math, Computer Science and Software Engineering allows me to communicate to a wide scientific and general audience and begin contributing to any group immediately.
-    Full-stack software engineer. Python/PHP backend processing, services and tool development. Linux and Windows standalone application development. Distributable compiled remote solutions with rigid RESTful or JSON API implementation. Experience with database modeling using both ORM or custom models. Responsive frontend HTML5 views and custom or framework-based JavaScript data-binding methodologies. AJAX and websocket experience. Integration of external SOAP and RESTful API data sources. Concurrent processing and message queues.
-
-    *Languages*: /Expert in/ Ruby, Python, PHP, Perl, Javascript, HTML5, CSS3, SQL; /Proficient in/ Lisp, Java, C/C++
-    *Frameworks*: /Expert in/ CodeIgniter, Ruby on Rails, Yii, Larvel, Django, jQuery, WordPress, Bootstrap, Jekyll; /Proficient in/ Backbone.js, Joomla, Flask
-    *Databases*: /Expert in/ MySQL, PostgreSQL, MongoDB; /Proficient in/ SQLite3
-    *Web Servers*: /Expert in/ Nginx, Apache
-    *APIs*: Zendesk; Amazon Marketplace; Christie, GDC, Doremi, Sony and Dolby digital cinema servers
-    *Markup*: /Expert in/ HTML5, CSS3, JSON, XML, Markdown, Handlebars; /Proficient in/ LaTeX, Emacs Org-mode
-    *Platforms*: /Expert in/ Linux (Debian, EL and Arch); /Proficient in/ Windows (for Python), Vagrant, Docker
-    *Tools*: /Expert in/ Emacs, Vim, Git, Sublime Text, Aptana (for PHP), Eclipse (for Java), Git, SSH, Python unittest, SNMP; /Proficient in/ Jenkins, Ansible, Puppet, ZeroMQ (for websocket), RabbitMQ, phpunit
-    *Design Patterns*: /Expert in/ Object-Oriented, Model-View-Controller, Extract-Transform-Load, brokers, event-driven, concurrency, algorithms; /Proficient in/ microservices, publish/subscribe (MQ)
-    *Methodologies*: Agile, Waterfall, Test Driven Development, Continuous Integration
-
-    * Manderine
-    Native language.
-    * English
-    CET6(525). Fluent in English learning, writing and oral communication.
-    * Japanese
-    Manage some basic Japanese reading and conversation.
   </p>
+  <p>
+    Diverse background in Math, Computer Science and Software Engineering allows me to communicate to a wide scientific and general audience and begin contributing to any group immediately.
+  </p>
+  <p>
+    Full-stack software engineer. Python/PHP backend processing, services and tool development. Linux and Windows standalone application development. Distributable compiled remote solutions with rigid RESTful or JSON API implementation. Experience with database modeling using both ORM or custom models. Responsive frontend HTML5 views and custom or framework-based JavaScript data-binding methodologies. AJAX and websocket experience. Integration of external SOAP and RESTful API data sources. Concurrent processing and message queues.
+  </p>
+  <p>*Programming*:     Expert in Ruby, Python, PHP, Perl, Javascript, HTML5, CSS3, SQL; Proficient in Lisp, Java, C/C++ </p>
+  <p>*Frameworks*:      Expert in CodeIgniter, Ruby on Rails, Yii, Larvel, Django, jQuery, WordPress, Bootstrap, Jekyll; Proficient in Backbone.js, Joomla, Flask </p>
+  <p>*Databases*:       Expert in MySQL, PostgreSQL, MongoDB; Proficient in SQLite3 </p>
+  <p>*Web Servers*:     Expert in Nginx, Apache </p>
+  <p>*APIs*:            Amazon, Aliyun, Yuntongxun, Qiniu; </p>
+  <p>*Markup*:          Expert in HTML5, CSS3, JSON, XML, Markdown, Handlebars; Proficient in LaTeX, Emacs Org-mode </p>
+  <p>*Platforms*:       Expert in Linux (Debian, EL and Arch); Proficient in Windows (for Python), Vagrant, Docker </p>
+  <p>*Tools*:           Expert in Emacs, Vim, Git, Sublime Text, Aptana (for PHP), Eclipse (for Java), Git, SSH, Python unittest, SNMP; Proficient in Jenkins, Ansible, Puppet, ZeroMQ (for websocket), RabbitMQ, phpunit </p>
+  <p>*Design Patterns*: Expert in Object-Oriented, Model-View-Controller, Extract-Transform-Load, brokers, event-driven, concurrency, algorithms; Proficient in microservices, publish/subscribe (MQ) </p>
+  <p>*Methodologies*:   Agile, Waterfall, Test Driven Development, Continuous Integration </p>
+
+  <p>*Languages*:       Manderine: Native language. English: CET6(525). Fluent in English learning, writing and oral communication. Japanese: Manage some basic Japanese reading and conversation. </p>
 
   <p>
-    You can also send him an <a href="mailto:jishakai@qq.com;">email</a> or add his wechat: skji.
+    You can also send me an <a href="mailto:jishakai@qq.com;">email</a> or add my wechat: skji.
   </p>
 </section>
